erDiagram
    WORKSPACE ||--o{ DIAGRAM : contains
    USER ||--o{ WORKSPACE : owns
    DIAGRAM ||--o{ ENTITY : contains
    ENTITY ||--o{ ATTRIBUTE : has

    USER {
        uuid Id PK
        string FullName
        string Email
    }

    WORKSPACE {
        uuid Id PK
        uuid UserId FK
        string Name
        string Description
    }

    DIAGRAM {
        uuid Id PK
        uuid WorkspaceId FK
        string Name
        string DiagramType
        string Description
        string MermaidCode
    }

    ENTITY {
        uuid Id PK
        uuid DiagramId FK
        string Name
    }

    ATTRIBUTE {
        uuid Id PK
        uuid EntityId FK
        string Name
        string DataType
        boolean IsPrimaryKey
        boolean IsNullable
    }